--- a/client/src/components/Display.css
+++ b/client/src/components/Display.css
@@ -16,28 +16,26 @@
   }
   
   .button {
-    background-color: initial;
-    background-image: linear-gradient(-180deg, #009ffd, #2a2a72);
-    border-radius: 6px;
-    color: #ffffff;
-    padding: 5px 10px;
-    border: none;
-    font-size: 16px;
-    border-radius: 5px;
-    margin-right: 10px;
-    padding-bottom: 10px;
-  }
-  .button:hover {
-    box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
-  }
-  .address {
-    display: block;
-    margin: auto;
-    height: 30px;
-    width: 330px;
-    text-align: center;
+     /* padding:1rem;
+    display:block;
+    margin-top:1rem; */
+    top:1rem;
+   margin:auto; 
   }
   
+  .address {
+    background-color: rgb(255, 255, 255);
+  color: rgb(203, 203, 207);
+    display: block;
+    margin: auto;
+    border:2px solid rgb(215, 222, 245);
+    text-align: center;
+    border-radius:5px;
+  }  
+  input{
+    outline:none;
+    background:none;
+  }
   input[type="text"]:focus {
-    background-color: lightblue;
+   border:2px solid rgb(12, 27, 72);
   }
