--- a/client/src/components/FileUpload.css
+++ b/client/src/components/FileUpload.css
@@ -5,47 +5,99 @@
   input[type="file"] {
     display: none;
   }
+ .form{
+    color:#494366;
+    height:25vh;
+    display:flex;
+    justify-content:space-between;
+    flex-direction:column;
+    align-items:center;
+ }
   
-  .choose {
-    background-color: initial;
-    background-image: linear-gradient(-180deg, #5aff15, #00b712);
-    border-radius: 6px;
-    color: #ffffff;
-    padding: 5px 10px;
-    border-radius: 6px;
-    margin-right: 10px;
-    padding-bottom: 10px;
+.button-64 {
+    align-items: center;
+    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
   }
-  .choose:hover {
-    box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
+  
+  .button-64:active,
+  .button-64:hover {
+    outline: 0;
+  }
+  
+  .button-64 span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+  }
+  
+  .button-64:hover span {
+    background: none;
+  }
+  
+  @media (min-width: 768px) {
+    .button-64 {
+      font-size: 24px;
+      min-width: 196px;
+    }
   }
   .textArea {
-    color: white;
+    color: #494366;
   }
   
   .upload {
-    border: 1px solid #13aa52;
-    background-color: #13aa52;
-    color: #ffffff;
-    padding: 5px 10px;
+    position: relative;
+  padding: 10px 20px;
+    border: 1px solid #3b2798;
+    background-color: #3b2798 ;
+    border-radius: 10px;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+    /* padding: 5px 10px;
     border-radius: 6px;
-    margin-left: 10px;
+    margin-left: 10px; */
   }
   
   .upload:hover {
-    border: 1px solid #13aa52;
-    background-color: #a5efc1;
-    color: #ffffff;
-    padding: 5px 10px;
+    border: 1px solid #422da1 ;
+    background-color: #4b32bd;
+   
   }
   
   .upload:disabled,
   .upload[disabled] {
-    border: 1px solid #999999;
-    background-color: #cccccc;
-    color: #666666;
+    
+  background-color: rgba(224, 217, 217, 0.2); /* Semi-transparent background */
+  border: 1px solid rgba(194, 192, 192, 0.5); /* Transparent border */
+  border-radius: 10px;
+  color: #494366;
+  font-size: 18px;
+  cursor: pointer;
+  backdrop-filter: blur(10px); /* Blur effect */
+  -webkit-backdrop-filter: blur(10px); /* For Safari */
+  transition: 0.3s;
   }
   
-  div {
-    padding: 5px 10px;
-  }
+  
